fix(style): align packages info button icon

--- a/src/Pages/Packages/style.less
+++ b/src/Pages/Packages/style.less
@@ -49,6 +49,10 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+
+    & > span {
+      display: flex;
+    }
   }
   .Package__Badges {
     margin-top: 7px;
